--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -13,7 +13,7 @@
         </li>
         <li class="nav-item">
           <a routerLink="/cats" class="nav-link" routerLinkActive="active">
-            <i class="fa fa-list"></i> Cats
+            <i class="fa fa-list"></i> Vault
           </a>
         </li>
         <li class="nav-item">
@@ -27,7 +27,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a routerLink="/account" class="nav-link" routerLinkActive="active" *ngIf="auth.loggedIn">
+          <a routerLink="/account" id="getUserFrom" class="nav-link" routerLinkActive="active" *ngIf="auth.loggedIn">
             <i class="fa fa-user"></i> Account ({{auth.currentUser.username}})
           </a>
         </li>
