added portfolio page

--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-
+<script src = "./cats.js"></script>
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -8,12 +8,12 @@
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
           <a routerLink="/" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
-            <i class="fa fa-home"></i> Home
+            <i class="fa fa-home"></i> Portfolio
           </a>
         </li>
         <li class="nav-item">
-          <a routerLink="/cats" class="nav-link" routerLinkActive="active">
-            <i class="fa fa-list"></i> Vault
+          <a routerLink="/transactions" class="nav-link" routerLinkActive="active">
+            <i class="fa fa-list"></i> Transactions
           </a>
         </li>
         <li class="nav-item">
